# wagtail_blog

./: .gitignore  pyproject.toml
blog/: abstract.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0001_squashed_0006_auto_20180206_2239.py  0004_alter_blogpagetag_tag.py
