[project]
name = "wagtail_blog"
version = "2.3.6"
description = "A wordpress like blog app implemented in wagtail"
authors = [
  { name = "David Burke" },
]
license = { text = "Apache License" }
keywords = ["django", "wagtail", "blog"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  'Environment :: Web Environment',
  'Framework :: Django',
  'Framework :: Wagtail',
  'Intended Audience :: Developers',
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "django>=5.0",
  "wagtail>=6.0",
  "requests",
  "lxml",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
